# website

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Rocket.toml  requirements.txt
.github/workflows/: main.yml
migrations/2020-09-21-054640_init/: down.sql  up.sql
personalsite/: admin.py  models.py  urls.py  utils.py  views.py
personalsite/migrations/: 0001_initial.py  0002_auto_20200610_0447.py  0003_project.py  0004_auto_20200623_0547.py  0005_post_reading_time.py  0006_post_summary.py  0007_auto_20200626_0035.py
personalsite/templates/: 404.html  500.html  about.html  base.html  blog.html  index.html  post.html  projects.html  robots.txt
src/: main.rs  models.rs  schema.rs
static/: 404.html  site.webmanifest
static/admin/css/: autocomplete.css  base.css  changelists.css  forms.css  login.css  responsive.css  responsive_rtl.css  rtl.css  widgets.css
static/admin/js/: autocomplete.js  calendar.js
static/css/: code.css  styles.css
static/js/: main.js
templates/: 404.html.tera  500.html.tera  about.html.tera  base.html.tera  blog.html.tera  index.html.tera  post.html.tera  projects.html.tera  robots.txt  sitemap.txt
