[package]
name = "website"
version = "0.1.0"
authors = ["Joshua Hill <josh@pyxxilated.studio>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "diesel_sqlite_pool"]
